syntax = "proto3";

package checkUserId;


service CheckUserId {
  rpc checkUserIdAvailablity (userId) returns (availablity);
}

message userId {
  string userId = 1;
  string method = 2;
}

message availablity {
  bool isExist = 1;
  string userId = 2;
  string publicKey = 3;
  string salt = 4;
  string iv = 5;
  double r = 6;
  double p = 7;
  double n = 8;
}

