syntax = "proto3";

package registerServices;

service RegisterServices {
    rpc checkUserIdAvailablity (userId) returns (availablity);
    rpc register (userData) returns (registerAcknowledgement);
    rpc resendOTP (resendOTP) returns (recendOTPAcknowledgement);
    rpc verifyOTP (verifyOTP) returns (verifiedOTPAcknowledgement);
};


message userId {
    string userId = 1;
};

message availablity {
    bool isExist = 1;
    string publicKey = 2;
    string salt = 3;
    string iv = 4;
    string userId = 5;
};

message userData {
    string userId = 1;
    string hashedPassword = 2;
    string hashedName = 3;
    string email = 4;
    string hashedMotherName = 5;
    string hashedFatherName = 6;
    string hashedDOB = 7;
    string hashedIpAddress = 8;
    number longitude = 9;
    number latitude = 10;
    string browser = 11;
    string deviceName = 12;
    string method = 15;
}

message registerAcknowledgement {
    string message = 1;
    string userId = 2;
}

message resendOTP {
    string userId = 1;
}

message resendOTPAcknowledgement {
    string acknowledgement = 1;
    string userId = 2;
}

message verifyOTP {
    string OTP = 1;
    string userId = 2;
}

message verifyOTPAcknowledgement {
    bool isVerified = 1;
    string userId = 2;
    string acknowledgement = 3;
}